--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -61,6 +61,8 @@ pyparsing==3.2.1
 pyphen==0.17.0
 pytest==6.2.4
 pytest-asyncio==0.15.1
+pytest-cov==4.1.0
+httpx==0.18.2
 python-dateutil==2.9.0.post0
 python-dotenv==0.20.0
 python-multipart==0.0.5
